trying the first problem

--- a/Olimpida po polsku/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
+++ b/Olimpida po polsku/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,27 +306,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class YourCnnClassifier(CnnClassifier):\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets, transforms, models\n",
+    "\n",
+    "class YourCnnClassifier(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(YourCnnClassifier, self).__init__()\n",
+    "     \n",
+    "        self.model = models.resnet18(pretrained=True)\n",
+    "        # Modify the first convolutional layer to accept single-channel input\n",
+    "        self.model.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
+    "        num_features = self.model.fc.in_features\n",
+    "        self.model.fc = nn.Linear(num_features, 2)   \n",
+    "\n",
     "    def forward(self, x):\n",
-    "        batch_size, *_ = x.shape\n",
-    "        return torch.zeros(batch_size)\n",
+    "        return self.model(x)\n",
     "\n",
     "    @classmethod\n",
-    "    def load(cls) -> Self:\n",
-    "        return cls()\n",
-    "    \n",
+    "    def load(cls):\n",
+    "        model = cls()\n",
+    "        model.load_state_dict(torch.load('cnn-classifier.pth'))\n",
+    "        model.eval()\n",
+    "        \n",
+    "        return model\n",
+    "\n",
     "    @classmethod\n",
-    "    def create_with_training(cls) -> Self:\n",
-    "        return cls()"
+    "    def create_with_training(cls, num_epochs=3, learning_rate=0.001):\n",
+    "        model = cls()\n",
+    "        model.train()\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
+    "        M_params = list(model.parameters())\n",
+    "        optimizer = optim.Adam(M_params, lr=learning_rate)\n",
+    "        train_data_loader = valid_dataset.loader()\n",
+    "\n",
+    "        for epoch in range(num_epochs):\n",
+    "            running_loss = 0.0\n",
+    "            for inputs, labels in train_data_loader:\n",
+    "                optimizer.zero_grad()\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "\n",
+    "                running_loss += loss.item()\n",
+    "\n",
+    "           \n",
+    "\n",
+    "        torch.save(model.state_dict(), 'cnn-classifier.pth')\n",
+    "        return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,9 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: -13%\n",
+      "YourCnnClassifier -- Ocena: 0.00 pkt\n"
+     ]
+    }
+   ],
    "source": [
     "######################### NIE ZMIENIAJ TEJ KOMÓRKI PODCZAS WYSYŁANIA ##########################\n",
     "\n",
