--- a/Olimpiada po angielksu/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
+++ b/Olimpiada po angielksu/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -299,29 +299,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class YourCnnClassifier(CnnClassifier):\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets, transforms, models\n",
+    "\n",
+    "class YourCnnClassifier(nn.Module):\n",
+    "    def _init_(self):\n",
+    "        super(YourCnnClassifier, self)._init_()\n",
+    "     \n",
+    "        self.model = models.resnet18(pretrained=True)\n",
+    "        num_features = self.model.fc.in_features\n",
+    "        self.model.fc = nn.Linear(num_features, 2)  \n",
+    "\n",
     "    def forward(self, x):\n",
-    "        batch_size, *_ = x.shape\n",
-    "        return torch.zeros(batch_size)\n",
+    "        return self.model(x)\n",
     "\n",
     "    @classmethod\n",
-    "    def load(cls) -> Self:\n",
-    "        return cls()\n",
-    "    \n",
+    "    def load(cls):\n",
+    "        model = cls()\n",
+    "        model.load_state_dict(torch.load('cnn-classifier.pth'))\n",
+    "        model.eval()\n",
+    "        \n",
+    "        return model\n",
+    "\n",
     "    @classmethod\n",
-    "    def create_with_training(cls) -> Self:\n",
-    "        return cls()"
+    "    def create_with_training(cls, num_epochs=10, learning_rate=0.001):\n",
+    "        model = cls()\n",
+    "        model.train()\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
+    "        optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "        for epoch in range(num_epochs):\n",
+    "            running_loss = 0.0\n",
+    "            for inputs, labels in train_data_loader:\n",
+    "                optimizer.zero_grad()\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "\n",
+    "                running_loss += loss.item()\n",
+    "\n",
+    "           \n",
+    "\n",
+    "        torch.save(model.state_dict(), 'cnn-classifier.pth')\n",
+    "        return model\n",
+    "\n",
+    "\n",
+    "# if _name_ == '_main_':\n",
+    "   \n",
+    "#     transform = transforms.Compose([\n",
+    "#         transforms.Resize((224, 224)),\n",
+    "#         transforms.ToTensor(),\n",
+    "#         transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "#     ])\n",
+    "\n",
+    "\n",
+    "#     train_dataset = datasets.ImageFolder(root='path_to_train_dataset', transform=transform)\n",
+    "#     train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "\n",
+    "#     model = YourCnnClassifier.create_with_training(train_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "optimizer got an empty parameter list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m######################### DO NOT MODIFY THIS CELL WHILE SENDING ##########################\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m your_model \u001b[38;5;241m=\u001b[39m YourCnnClassifier\u001b[38;5;241m.\u001b[39mload() \u001b[38;5;28;01mif\u001b[39;00m FINAL_EVALUATION_MODE \u001b[38;5;28;01melse\u001b[39;00m YourCnnClassifier\u001b[38;5;241m.\u001b[39mcreate_with_training()\n",
+      "Cell \u001b[0;32mIn[20], line 31\u001b[0m, in \u001b[0;36mYourCnnClassifier.create_with_training\u001b[0;34m(cls, num_epochs, learning_rate)\u001b[0m\n\u001b[1;32m     29\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m     30\u001b[0m criterion \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m---> 31\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlearning_rate)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[1;32m     34\u001b[0m     running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/optim/adam.py:45\u001b[0m, in \u001b[0;36mAdam.__init__\u001b[0;34m(self, params, lr, betas, eps, weight_decay, amsgrad, foreach, maximize, capturable, differentiable, fused)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid weight_decay value: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mweight_decay\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     41\u001b[0m defaults \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(lr\u001b[38;5;241m=\u001b[39mlr, betas\u001b[38;5;241m=\u001b[39mbetas, eps\u001b[38;5;241m=\u001b[39meps,\n\u001b[1;32m     42\u001b[0m                 weight_decay\u001b[38;5;241m=\u001b[39mweight_decay, amsgrad\u001b[38;5;241m=\u001b[39mamsgrad,\n\u001b[1;32m     43\u001b[0m                 maximize\u001b[38;5;241m=\u001b[39mmaximize, foreach\u001b[38;5;241m=\u001b[39mforeach, capturable\u001b[38;5;241m=\u001b[39mcapturable,\n\u001b[1;32m     44\u001b[0m                 differentiable\u001b[38;5;241m=\u001b[39mdifferentiable, fused\u001b[38;5;241m=\u001b[39mfused)\n\u001b[0;32m---> 45\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(params, defaults)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fused:\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m differentiable:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/optim/optimizer.py:279\u001b[0m, in \u001b[0;36mOptimizer.__init__\u001b[0;34m(self, params, defaults)\u001b[0m\n\u001b[1;32m    277\u001b[0m param_groups \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(params)\n\u001b[1;32m    278\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(param_groups) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 279\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptimizer got an empty parameter list\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    280\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(param_groups[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m    281\u001b[0m     param_groups \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m'\u001b[39m: param_groups}]\n",
+      "\u001b[0;31mValueError\u001b[0m: optimizer got an empty parameter list"
+     ]
+    }
+   ],
    "source": [
     "######################### DO NOT MODIFY THIS CELL WHILE SENDING ##########################\n",
     "\n",
@@ -337,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
