--- a/Olimpida po polsku/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
+++ b/Olimpida po polsku/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,10 +208,15 @@
     "    total = 0\n",
     "    with torch.no_grad():\n",
     "        for [images, labels] in test_loader:\n",
-    "            outputs = model(images).squeeze()\n",
+    "            outputs = model(images)\n",
+    "            print(outputs)\n",
+    "            outputs = outputs.squeeze()\n",
+    "            print(outputs)\n",
     "            incorrect_indices = torch.where((outputs > 0.5).int() != labels)[0]\n",
+    "            print(incorrect_indices)\n",
     "            correct += len(labels) - len(incorrect_indices)\n",
     "            total += len(labels)\n",
+    "            print(correct, total, len(labels), len(incorrect_indices))\n",
     "        accuracy = correct / total if total != 0 else 0\n",
     "        if not FINAL_EVALUATION_MODE:\n",
     "            print(f\"Accuracy: {int(round(accuracy, 2) * 100)}%\")\n",
@@ -306,13 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms, models\n",
     "\n",
@@ -320,14 +326,21 @@
     "    def __init__(self):\n",
     "        super(YourCnnClassifier, self).__init__()\n",
     "     \n",
-    "        self.model = models.resnet18(pretrained=True)\n",
-    "        # Modify the first convolutional layer to accept single-channel input\n",
-    "        self.model.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
-    "        num_features = self.model.fc.in_features\n",
-    "        self.model.fc = nn.Linear(num_features, 2)   \n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
+    "        self.fc1 = nn.Linear(32 * 56 * 56, 128)  # Assuming input image size is 224x224\n",
+    "        self.fc2 = nn.Linear(128, 1)  # Output size 1 for binary classification\n",
+    "        self.sigmoid = nn.Sigmoid()  # Sigmoid activation function\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.model(x)\n",
+    "        x = self.pool(self.relu(self.conv1(x)))\n",
+    "        x = self.pool(self.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 32 * 56 * 56)  # Reshape for fully connected layer\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.sigmoid(self.fc2(x))  # Apply sigmoid activation\n",
+    "        return x\n",
     "\n",
     "    @classmethod\n",
     "    def load(cls):\n",
@@ -338,12 +351,11 @@
     "        return model\n",
     "\n",
     "    @classmethod\n",
-    "    def create_with_training(cls, num_epochs=3, learning_rate=0.001):\n",
+    "    def create_with_training(cls, num_epochs=7, learning_rate=0.001):\n",
     "        model = cls()\n",
     "        model.train()\n",
-    "        criterion = nn.CrossEntropyLoss()\n",
-    "        M_params = list(model.parameters())\n",
-    "        optimizer = optim.Adam(M_params, lr=learning_rate)\n",
+    "        criterion = nn.BCELoss()  # Use BCELoss for binary classification with probabilities\n",
+    "        optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "        train_data_loader = valid_dataset.loader()\n",
     "\n",
     "        for epoch in range(num_epochs):\n",
@@ -351,13 +363,12 @@
     "            for inputs, labels in train_data_loader:\n",
     "                optimizer.zero_grad()\n",
     "                outputs = model(inputs)\n",
-    "                loss = criterion(outputs, labels)\n",
+    "                loss = criterion(outputs, labels.float().view(-1, 1))  # Ensure labels have shape [batch_size, 1]\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "\n",
     "                running_loss += loss.item()\n",
-    "\n",
-    "           \n",
+    "            print(running_loss)   \n",
     "\n",
     "        torch.save(model.state_dict(), 'cnn-classifier.pth')\n",
     "        return model"
@@ -365,9 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.42399386117904\n",
+      "3.7863998687337244\n",
+      "1.1749813892747056\n",
+      "0.12013660714265484\n",
+      "0.05485569124660117\n",
+      "0.04836497883516966\n",
+      "0.011331431889225252\n"
+     ]
+    }
+   ],
    "source": [
     "######################### NIE ZMIENIAJ TEJ KOMÓRKI PODCZAS WYSYŁANIA ##########################\n",
     "\n",
@@ -383,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,15 +421,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: -13%\n",
-      "YourCnnClassifier -- Ocena: 0.00 pkt\n"
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "1 1 1 0\n",
+      "tensor([[2.2272e-07]])\n",
+      "tensor(2.2272e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "2 2 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "3 3 1 0\n",
+      "tensor([[0.9997]])\n",
+      "tensor(0.9997)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "4 4 1 0\n",
+      "tensor([[8.5864e-07]])\n",
+      "tensor(8.5864e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "5 5 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "6 6 1 0\n",
+      "tensor([[1.1797e-07]])\n",
+      "tensor(1.1797e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "7 7 1 0\n",
+      "tensor([[6.0478e-06]])\n",
+      "tensor(6.0478e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "8 8 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "9 9 1 0\n",
+      "tensor([[0.0005]])\n",
+      "tensor(0.0005)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "10 10 1 0\n",
+      "tensor([[1.8217e-08]])\n",
+      "tensor(1.8217e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "11 11 1 0\n",
+      "tensor([[7.3988e-08]])\n",
+      "tensor(7.3988e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "12 12 1 0\n",
+      "tensor([[5.6041e-07]])\n",
+      "tensor(5.6041e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "13 13 1 0\n",
+      "tensor([[3.8844e-06]])\n",
+      "tensor(3.8844e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "14 14 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "15 15 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "16 16 1 0\n",
+      "tensor([[4.1400e-09]])\n",
+      "tensor(4.1400e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "17 17 1 0\n",
+      "tensor([[1.3277e-05]])\n",
+      "tensor(1.3277e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "18 18 1 0\n",
+      "tensor([[8.2226e-08]])\n",
+      "tensor(8.2226e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "19 19 1 0\n",
+      "tensor([[2.2230e-05]])\n",
+      "tensor(2.2230e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "20 20 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "21 21 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "22 22 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "23 23 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "24 24 1 0\n",
+      "tensor([[1.7483e-06]])\n",
+      "tensor(1.7483e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "25 25 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "26 26 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "27 27 1 0\n",
+      "tensor([[3.3405e-08]])\n",
+      "tensor(3.3405e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "28 28 1 0\n",
+      "tensor([[3.9319e-09]])\n",
+      "tensor(3.9319e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "29 29 1 0\n",
+      "tensor([[2.4174e-08]])\n",
+      "tensor(2.4174e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "30 30 1 0\n",
+      "tensor([[6.6473e-08]])\n",
+      "tensor(6.6473e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "31 31 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "32 32 1 0\n",
+      "tensor([[2.5072e-06]])\n",
+      "tensor(2.5072e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "33 33 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "34 34 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "35 35 1 0\n",
+      "tensor([[7.6091e-09]])\n",
+      "tensor(7.6091e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "36 36 1 0\n",
+      "tensor([[6.5990e-05]])\n",
+      "tensor(6.5990e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "37 37 1 0\n",
+      "tensor([[1.0084e-08]])\n",
+      "tensor(1.0084e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "38 38 1 0\n",
+      "tensor([[2.7939e-05]])\n",
+      "tensor(2.7939e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "39 39 1 0\n",
+      "tensor([[2.3609e-09]])\n",
+      "tensor(2.3609e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "40 40 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "41 41 1 0\n",
+      "tensor([[1.1216e-08]])\n",
+      "tensor(1.1216e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "42 42 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "43 43 1 0\n",
+      "tensor([[3.9532e-05]])\n",
+      "tensor(3.9532e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "44 44 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "45 45 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "46 46 1 0\n",
+      "tensor([[2.8692e-06]])\n",
+      "tensor(2.8692e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "47 47 1 0\n",
+      "tensor([[0.0011]])\n",
+      "tensor(0.0011)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "48 48 1 0\n",
+      "tensor([[4.4774e-09]])\n",
+      "tensor(4.4774e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "49 49 1 0\n",
+      "tensor([[1.9482e-08]])\n",
+      "tensor(1.9482e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "50 50 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "51 51 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "52 52 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "53 53 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "54 54 1 0\n",
+      "tensor([[0.9998]])\n",
+      "tensor(0.9998)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "55 55 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "56 56 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "57 57 1 0\n",
+      "tensor([[2.3371e-07]])\n",
+      "tensor(2.3371e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "58 58 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "59 59 1 0\n",
+      "tensor([[1.2793e-06]])\n",
+      "tensor(1.2793e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "60 60 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "61 61 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "62 62 1 0\n",
+      "tensor([[0.0005]])\n",
+      "tensor(0.0005)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "63 63 1 0\n",
+      "tensor([[5.5588e-09]])\n",
+      "tensor(5.5588e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "64 64 1 0\n",
+      "tensor([[7.4547e-05]])\n",
+      "tensor(7.4547e-05)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "65 65 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "66 66 1 0\n",
+      "tensor([[4.8955e-06]])\n",
+      "tensor(4.8955e-06)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "67 67 1 0\n",
+      "tensor([[0.9998]])\n",
+      "tensor(0.9998)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "68 68 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "69 69 1 0\n",
+      "tensor([[0.9998]])\n",
+      "tensor(0.9998)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "70 70 1 0\n",
+      "tensor([[1.0668e-07]])\n",
+      "tensor(1.0668e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "71 71 1 0\n",
+      "tensor([[5.5034e-08]])\n",
+      "tensor(5.5034e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "72 72 1 0\n",
+      "tensor([[8.3087e-07]])\n",
+      "tensor(8.3087e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "73 73 1 0\n",
+      "tensor([[2.1016e-07]])\n",
+      "tensor(2.1016e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "74 74 1 0\n",
+      "tensor([[3.3735e-09]])\n",
+      "tensor(3.3735e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "75 75 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "76 76 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "77 77 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "78 78 1 0\n",
+      "tensor([[4.3098e-09]])\n",
+      "tensor(4.3098e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "79 79 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "80 80 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "81 81 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "82 82 1 0\n",
+      "tensor([[5.6086e-09]])\n",
+      "tensor(5.6086e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "83 83 1 0\n",
+      "tensor([[1.0381e-08]])\n",
+      "tensor(1.0381e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "84 84 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "85 85 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "86 86 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "87 87 1 0\n",
+      "tensor([[3.6668e-09]])\n",
+      "tensor(3.6668e-09)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "88 88 1 0\n",
+      "tensor([[0.9989]])\n",
+      "tensor(0.9989)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "89 89 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "90 90 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "91 91 1 0\n",
+      "tensor([[2.0919e-08]])\n",
+      "tensor(2.0919e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "92 92 1 0\n",
+      "tensor([[1.3526e-07]])\n",
+      "tensor(1.3526e-07)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "93 93 1 0\n",
+      "tensor([[0.9995]])\n",
+      "tensor(0.9995)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "94 94 1 0\n",
+      "tensor([[0.0012]])\n",
+      "tensor(0.0012)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "95 95 1 0\n",
+      "tensor([[0.9999]])\n",
+      "tensor(0.9999)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "96 96 1 0\n",
+      "tensor([[0.9998]])\n",
+      "tensor(0.9998)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "97 97 1 0\n",
+      "tensor([[1.0000]])\n",
+      "tensor(1.0000)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "98 98 1 0\n",
+      "tensor([[0.0002]])\n",
+      "tensor(0.0002)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "99 99 1 0\n",
+      "tensor([[1.8964e-08]])\n",
+      "tensor(1.8964e-08)\n",
+      "tensor([], dtype=torch.int64)\n",
+      "100 100 1 0\n",
+      "Accuracy: 100%\n",
+      "YourCnnClassifier -- Ocena: 1.00 pkt\n"
      ]
     }
    ],
