nauka modeli liniowych

--- a/Olimpida po polsku/ataki_adwersarialne/ataki_adwersarialne.ipynb
+++ b/Olimpida po polsku/ataki_adwersarialne/ataki_adwersarialne.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "X3pGyqgBn3uX"
       },
@@ -132,9 +132,89 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Retrieving folder contents\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Processing file 1QaZYqish4Us70fqQbhY3a7glec5Vbn5W contest_train_labels.npy\n",
+            "Processing file 1pS8J8KHqkGUABFKTSQfzrJujG7iDKB_o contest_train_samples.npy\n",
+            "Processing file 1SeBJUJlxEJ3Dgmm-rD2uPMKPXqarRjH_ contest_validation_labels.npy\n",
+            "Processing file 15s7KOfwLLsXoUgktOUXfzxOSnvSf_69A contest_validation_samples.npy\n",
+            "Retrieving folder 1ULqbHDn2lfmoM0jWY6Zrq0FFMCfZPq9d example_data\n",
+            "Processing file 1BAc2nYk0FzzGs_5U0vL_gff4RElZ9Rl8 example_image_1.jpg\n",
+            "Processing file 1bCFg2T8nasvZMPS8bw3hTIwmNdoG8-yn example_image_2.jpg\n",
+            "Processing file 1mbEtOo0lk0as5p8chiosRtN3Uw8S9dai example_image_3.jpg\n",
+            "Processing file 1L4WgIOeWHU_n2Xcr6WDMUqcN8aioSd7J example_image_4.jpg\n",
+            "Processing file 1Ql6-9VCIolioxAkdMm8DRZVXRQ32QuXE example_image_5.jpg\n",
+            "Processing file 1KjzNegiWR5ZAQaoBhYr72j5hSEyVoub- example_image_6.jpg\n",
+            "Processing file 1lR8tU2_044f5q_FeJLRh17JWnK3o73qW example_image_7.jpg\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Retrieving folder contents completed\n",
+            "Building directory structure\n",
+            "Building directory structure completed\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1QaZYqish4Us70fqQbhY3a7glec5Vbn5W\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/contest_train_labels.npy\n",
+            "100%|██████████| 488k/488k [00:00<00:00, 5.46MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1pS8J8KHqkGUABFKTSQfzrJujG7iDKB_o\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/contest_train_samples.npy\n",
+            "100%|██████████| 47.8M/47.8M [00:05<00:00, 9.29MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1SeBJUJlxEJ3Dgmm-rD2uPMKPXqarRjH_\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/contest_validation_labels.npy\n",
+            "100%|██████████| 88.1k/88.1k [00:00<00:00, 1.97MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=15s7KOfwLLsXoUgktOUXfzxOSnvSf_69A\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/contest_validation_samples.npy\n",
+            "100%|██████████| 8.62M/8.62M [00:01<00:00, 7.31MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1BAc2nYk0FzzGs_5U0vL_gff4RElZ9Rl8\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_1.jpg\n",
+            "100%|██████████| 5.12k/5.12k [00:00<00:00, 20.4MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1bCFg2T8nasvZMPS8bw3hTIwmNdoG8-yn\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_2.jpg\n",
+            "100%|██████████| 9.17k/9.17k [00:00<00:00, 4.26MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1mbEtOo0lk0as5p8chiosRtN3Uw8S9dai\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_3.jpg\n",
+            "100%|██████████| 6.16k/6.16k [00:00<00:00, 21.0MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1L4WgIOeWHU_n2Xcr6WDMUqcN8aioSd7J\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_4.jpg\n",
+            "100%|██████████| 5.70k/5.70k [00:00<00:00, 8.63MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1Ql6-9VCIolioxAkdMm8DRZVXRQ32QuXE\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_5.jpg\n",
+            "100%|██████████| 7.17k/7.17k [00:00<00:00, 5.98MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1KjzNegiWR5ZAQaoBhYr72j5hSEyVoub-\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_6.jpg\n",
+            "100%|██████████| 6.71k/6.71k [00:00<00:00, 5.84MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1lR8tU2_044f5q_FeJLRh17JWnK3o73qW\n",
+            "To: /home/kacper/Documents/AI/Olimpida po polsku/ataki_adwersarialne/data/example_data/example_image_7.jpg\n",
+            "100%|██████████| 7.19k/7.19k [00:00<00:00, 11.3MB/s]\n",
+            "Download completed\n"
+          ]
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "if not FINAL_EVALUATION_MODE:\n",
@@ -144,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -194,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -216,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -231,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "HI3Wo6SKoDpr"
       },
@@ -260,9 +340,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "if torch.cuda.is_available():\n",
@@ -287,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -362,9 +453,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dokładność klasyfikacji na 11000 obrazów wybranego zbioru wynosi 91.96363636363637 %.\n"
+          ]
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "if not FINAL_EVALUATION_MODE:\n",
@@ -392,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -435,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -465,9 +564,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Średnia wartość SSIM wynosi 1.0, a największa odległość między pikselami wynosi: 0.0.\n",
+            "Dokładność klasyfikacji na 11000 obrazów wybranego zbioru wynosi 91.96363636363637 %.\n"
+          ]
+        }
+      ],
       "source": [
         "if not FINAL_EVALUATION_MODE:\n",
         "    evaluate_algorithm(net, X_validation, y_validation, device, perturbe_dataset)"
@@ -494,7 +602,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
