--- a/Olimpida po polsku/pruning/pruning.ipynb
+++ b/Olimpida po polsku/pruning/pruning.ipynb
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -139,9 +139,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using cpu device\n"
+          ]
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "import copy\n",
@@ -173,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "CGT6a6HNLUsb"
       },
@@ -209,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -241,7 +249,36 @@
         "id": "6wUnuyGDJ7Lv",
         "outputId": "6248dc89-67c2-44b7-f4fd-7cf875539c2e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b2f8f98ddbdf45bbb64465112b1899b0",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/8000 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "36f9f03253d24e2d8b20d089f45a1f5a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/2000 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "\n",
@@ -274,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -332,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "ejmg01YQSDkP"
       },
@@ -363,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "DKHmJ6Vx_yvS"
       },
@@ -418,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "jJDPgiFDA52R"
       },
@@ -493,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -501,7 +538,22 @@
         "id": "id3_39t7CoQH",
         "outputId": "42f277c8-7710-4fca-c610-cb6bb5f96631"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-----------------------------------\n",
+            "After epoch 99 | valid loss: 499.16\n",
+            "-----------------------------------\n",
+            "\n",
+            "Loading best params on validation set in epoch 87 with loss 481.15\n",
+            "---------------------------\n",
+            "| Validation loss: 481.15 |\n",
+            "---------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
         "\n",
@@ -531,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -543,9 +595,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nowy model ma loss 31210.109\n",
+            "Po wczytaniu parametrów model ma loss 484.509\n",
+            "MSE modelu: 484.509 Sparsity: 0.014\n",
+            "Ten model zdobył 0.001 punktów!\n"
+          ]
+        }
+      ],
       "source": [
         "if not FINAL_EVALUATION_MODE:\n",
         "    # Zróbmy głęboką kopię, aby nie zmieniać wag wytrenowanego modelu\n",
@@ -588,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "hXc25J9-_r8J"
       },
@@ -622,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -647,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -672,9 +735,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "17e6da2a1573417dbbcd33f7cc12cabe",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/2000 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This model got 0.001 points!\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "2985a248fa3d4bfaa695bfd0b47f93c8",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/2000 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model had error: 484.509 and sparsity: 0.014\n",
+            "After loading parameters this model got 0.001 points!\n"
+          ]
+        }
+      ],
       "source": [
         "if not FINAL_EVALUATION_MODE:    \n",
         "    model_score = evaluate_algorithm(your_pruning_algorithm, initial_model, X_valid, y_valid)\n",
@@ -714,7 +821,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.11.7"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
