translating to english

--- a/Olimpiada po angielksu/ataki_adwersarialne/ataki_adwersarialne.ipynb
+++ b/Olimpiada po angielksu/ataki_adwersarialne/ataki_adwersarialne.ipynb
@@ -23,24 +23,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Wstęp\n",
-        "Jak pewnie słyszałaś/eś, sieci neuronowe są świetnym narzędziem do klasyfikacji obiektów, rozpoznawania złożonych zależności czy przewidywania przyszłych wartości na podstawie historycznych danych. Okazuje się, że są one przy tym podatne na ataki, które mogą znacząco osłabić ich działanie. Ataki te polegają na znalezieniu luki w rozumowaniu modelu. Załóżmy, że sieć nauczyła się rozpoznawać rower na zdjęciu. Spróbujmy inteligentnie zmodyfikować wybrane piksele z obszaru przedstawiającego rower tak, aby \"gołym okiem\" obrazek nadal przedstawiał rower. Zapytajmy sieć neuronową, czy nadal \"widzi\" rower na tak zmodyfikowanym obrazku. Jeżeli model nie zaklasyfikuje już obiektu jako rower, wówczas można stwierdzić, że **atak adwersarialny** się powiódł. **Atakiem adwersarialnym** nazywamy takie spreparowanie danych wejściowych, aby jak najskuteczniej zmylić sieć podczas podejmowania przez nią decyzji."
+        "## Introduction\n",
+        "\n",
+        "As you may have heard, neural networks are excellent tools for object classification, recognizing complex relationships, and predicting future values based on historical data. However, it turns out that they are susceptible to attacks that can significantly weaken their performance. These attacks involve finding a loophole in the model's reasoning. Let's assume that a network has learned to recognize a bicycle in a photo. Let's try to intelligently modify selected pixels in the area representing the bicycle so that to the \"naked eye,\" the image still depicts a bicycle. Then, we ask the neural network if it still \"sees\" a bicycle in the modified image. If the model no longer classifies the object as a bicycle, we can conclude that the **adversarial attack** was successful. An **adversarial attack** is defined as the preparation of input data in such a way as to most effectively confuse the network during its decision-making process."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Zadanie\n",
-        "Zaproponuj metodę włamania się do sieci neuronowej (ataku adwersarialnego), by obniżyć prawdopodobieństwo przypisania próbki do właściwej klasy, przy możliwie małych modyfikacjach testowanych obrazów. \n",
+        "## Task\n",
         "\n",
-        "Naszym kryterium będzie iloczyn wartości `structural similarity index` ([SSIM](https://scikit-image.org/docs/stable/auto_examples/transform/plot_ssim.html)) uśrednionego po wszystkich obrazach biorących udział w ataku, z wartością różnicy pomiędzy początkową dokładnością modelu na danym zbiorze, a jego dokładnością na tym samym zbiorze poddanym modyfikacjom, zgodnie ze wzorem:  \n",
-        "$$SSIM \\cdot (base_{acc} - final_{acc})$$\n",
-        "gdzie:\n",
-        "- $base_{acc}$ jest dokładnością klasyfikacji modelu na niezmodyfikowanym zbiorze testowym;\n",
-        "- $final_{acc}$ jest dokładnością klasyfikacji modelu na zmodyfikowanym zbiorze.\n",
+        "Propose a method to breach a neural network (an adversarial attack) to reduce the probability of assigning a sample to the correct class, with minimal modifications to the tested images.\n",
         "\n",
-        "Powyższe kryterium i wszystkie wymagane do niego funkcje są zaimplementowane poniżej przez nas."
+        "Our criterion will be the product of the `structural similarity index` ([SSIM](https://scikit-image.org/docs/stable/auto_examples/transform/plot_ssim.html)) value averaged over all images involved in the attack and the difference between the model's initial accuracy on a given dataset and its accuracy on the same modified dataset, according to the formula:\n",
+        "\n",
+        "\\[SSIM \\cdot (base_{acc} - final_{acc})\\]\n",
+        "\n",
+        "where:\n",
+        "- \\(base_{acc}\\) is the classification accuracy of the model on the unmodified test set;\n",
+        "- \\(final_{acc}\\) is the classification accuracy of the model on the modified set.\n",
+        "\n",
+        "The above criterion and all the necessary functions for it are implemented below by us."
       ]
     },
     {
@@ -59,33 +63,41 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Uwagi i wskazówki\n",
-        "- Model został wytrenowany na zbiorze, w którym każdy z obrazów został z osobna znormalizowany do przedziału $<-1, 1>$, zarówno w zbiorze treningowym jak i walidacyjnym. Zbiór testowy, który nie jest dołączony do instrukcji zadania, będzie znormalizowany w analogiczny sposób.\n",
-        "- Każdy obraz zbioru testowego będzie finalnie normalizowany do zakresu $<-1, 1>$, ale obrazy po modyfikacji, czyli na wyjściu funkcji `perturbe_dataset()`, będą jedynie przekształcane do postaci tensora i nie będą poddawane normalizacji.\n",
-        "- Swoje rozwiązania możesz testować na zbiorze treningowym i walidacyjnym, ale punktacja za zadanie zostanie przyznana jedynie na podstawie wyniku na zbiorze testowym."
+        "## Constraints\n",
+        "\n",
+        "- Your final solution will be tested in a GPU environment.\n",
+        "- Only solutions where the maximum distance between the pixels of the original image and the corresponding pixels after the adversarial attack (in terms of absolute value) is not greater than \\(0.3\\) will be considered. The images after the attacks are compared to the original images normalized to the range \\([-1, 1]\\).\n",
+        "\n",
+        "  **EXAMPLE:** The vectors \\([-1.0, 0.2, 0.5, -0.3]\\) and \\([-0.9, 0.1, 0.8, 0.0]\\) are valid because the vector of absolute differences between them \\([0.1, 0.1, 0.3, 0.3]\\) does not contain elements greater than \\(0.3\\). However, the vectors \\([0.2, 0.5, -1.0, -0.4]\\) and \\([0.3, -0.9, -0.9, -0.6]\\) are not valid because the second elements of both vectors differ by \\(1.4 > 0.3\\).\n",
+        "\n",
+        "- The function `perturb_dataset()` should accept a three-dimensional Numpy array of size (number of samples x 28 x 28) and return a Numpy array of size (number of samples x 28 x 28), which will be the modified dataset. While creating the modified version of the dataset, you may use any information derived from the trained model.\n",
+        "\n",
+        "- Your attack should be executed within a maximum of 5 minutes using Google Colab with GPU."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Pliki zgłoszeniowe\n",
-        " Tylko ten notebook. "
+        "## Submission Files\n",
+        "\n",
+        "Only this notebook."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Ewaluacja\n",
-        "Pamiętaj, że podczas sprawdzania flaga `FINAL_EVALUATION_MODE` zostanie ustawiona na `True`. Za pomocą skryptu `validation_script.py` będziesz mógł upewnić się, że Twoje rozwiązanie zostanie prawidłowo wykonane na naszych serwerach oceniających. "
+        "## Evaluation\n",
+        "\n",
+        "Remember that during evaluation, the flag `FINAL_EVALUATION_MODE` will be set to `True`. You can use the script `validation_script.py` to ensure that your solution will be correctly executed on our evaluation servers."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Kod startowy"
+        "# Starting Code"
       ]
     },
     {
@@ -94,10 +106,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI PODCZAS WYSYŁANIA ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "FINAL_EVALUATION_MODE = False \n",
-        "# W czasie sprawdzania Twojego rozwiązania, zmienimy tę wartość na True\n",
-        "# Wartość tej flagi M U S I zostać ustawiona na False w rozwiązaniu, które nam nadeślesz!"
+        "# During the evaluation of your solution, we will change this value to True\n",
+        "# This flag M U S T be set to False in the solution you submit to us!"
       ]
     },
     {
@@ -108,7 +120,7 @@
       },
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "import os\n",
         "from copy import deepcopy\n",
         "\n",
@@ -127,7 +139,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Ładowanie danych"
+        "## Loading data"
       ]
     },
     {
@@ -136,7 +148,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "if not FINAL_EVALUATION_MODE:\n",
         "    if not os.path.exists(f\"data\"):\n",
         "        gdown.download_folder(url=\"https://drive.google.com/drive/folders/1qmRd5O-LdOki1-HC4dgfaNrstzG3h_cN?usp=sharing\", output=f\"./data\")"
@@ -148,9 +160,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
-        "# Klasa zbioru danych\n",
+        "# dataset class\n",
         "class ContestDataset(Dataset):\n",
         "    def __init__(self, data, labels, transform=None):\n",
         "        self.data = data\n",
@@ -174,7 +186,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
         "# Funkcja do normalizacji wartości pikseli do przedziału <-1, 1>\n",
         "def normalize_samples(samples):\n",
@@ -198,11 +210,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
-        "# Wczytajmy potrzebne dane\n",
-        "# X_train oraz y_train posłużą Ci do przygotowania ataku adwersarialnego\n",
-        "# Na X_validation oraz y_validation sprawdzisz czy Twoje rozwiązanie przechodzi skrypt ewaluacyjny\n",
+        "# Load the necessary data\n",
+        "# X_train and y_train will be used to prepare the adversarial attack\n",
+        "# You will use X_validation and y_validation to check if your solution passes the evaluation script\n",
+        "\n",
+        "Feel free to ask if you need more translations or additional help!\n",
         "path_to_data = './data/'\n",
         "\n",
         "X_train = np.load(f'{path_to_data}contest_train_samples.npy') / 255.\n",
@@ -220,7 +234,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "validation_set = ContestDataset(X_validation,\n",
         "                                y_validation,\n",
         "                                transform=transforms.ToTensor())\n",
@@ -237,9 +251,9 @@
       },
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
-        "# Definicja klasyfikatora, który chcemy oszukać!\n",
+        "# Definition of the classifier we want to fool!\n",
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(Net, self).__init__()\n",
@@ -264,7 +278,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "if torch.cuda.is_available():\n",
         "    device = 'cuda'\n",
         "else:\n",
@@ -282,7 +296,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Kod z kryteriami oceniającymi"
+        "## Code with Evaluation Criteria"
       ]
     },
     {
@@ -291,7 +305,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
         "def evaluate_network(data_loader,\n",
         "                     model,\n",
@@ -329,7 +343,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "\n",
         "# Funkcja do wyliczenia SSIM oraz maksymalnej odległości między odpowiadającymi pikselami\n",
         "def calculate_similarity(original_dataset,\n",
@@ -366,7 +380,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "######################### NIE ZMIENIAJ TEJ KOMÓRKI ##########################\n",
+        "######################### DO NOT MODIFY THIS CELL WHEN SUBMITTING ##########################\n",
         "if not FINAL_EVALUATION_MODE:\n",
         "    result = evaluate_network(\n",
         "        validation_loader,\n",
@@ -380,14 +394,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Twoje rozwiązanie"
+        "# Your solution"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To jest jedyna sekcja, w której musisz coś zrobić."
+        "This the only section where you can code."
       ]
     },
     {
@@ -421,16 +435,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ewaluacja"
+        "# Evaluation"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Poniższy kod będzie służył ewaluacji rozwiązania. Po wysłaniu rozwiązania do nas zostanie wykonana funkcja `evaluate_algorithm(net, X_validation, y_validation, device, perturbe_dataset)`, t.j. prawie identyczny kod jak niżej będzie się uruchamiał na katalogu zdjęć `test_data` dostępnym tylko dla sprawdzających zadania.\n",
+        "The following code will be used to evaluate your solution. After submitting your solution, the function `evaluate_algorithm(net, X_validation, y_validation, device, perturbe_dataset)` will be executed, i.e., almost identical code to the one below will run on the `test_data` directory, which is only accessible to the task evaluators.\n",
         "\n",
-        "Upewnij się przed wysłaniem, że cały notebook wykonuje się od początku do końca bez błędów i bez ingerencji użytkownika po wykonaniu polecenia `Run All`."
+        "Make sure before submission that the entire notebook executes from start to finish without errors and without user intervention after executing the `Run All` command."
       ]
     },
     {
