--- a/Olimpiada po angielksu/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
+++ b/Olimpiada po angielksu/niezbalansowana_klasyfikacja/niezbalansowana_klasyfikacja.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Self\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgdown\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "######################### DO NOT MODIFY THIS CELL WHILE SENDING ##########################\n",
     "\n",
     "import abc\n",
     "from typing import Self\n",
     "import os\n",
-    "\n",
+    "import tensorflow as tf\n",
     "import glob\n",
     "import gdown\n",
     "import numpy as np\n",
@@ -119,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +345,7 @@
     "        model = cls()\n",
     "        model.train()\n",
     "        criterion = nn.CrossEntropyLoss()\n",
-    "        optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "        optimizer = optim.Adam(params=model.parameters(), lr=learning_rate)\n",
     "\n",
     "        for epoch in range(num_epochs):\n",
     "            running_loss = 0.0\n",
@@ -367,6 +379,13 @@
     "\n",
     "#     model = YourCnnClassifier.create_with_training(train_loader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
